...
                                          24.0, 16.0, 24.0, 0.0),
                                      child: SingleChildScrollView(
                                        key: ValueKey('Column_69yy'),
                                        child: Column(
                                          mainAxisSize: MainAxisSize.max,
...
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'emailAddress_Create_l26n'),
                                                        controller: _model
                                                            .emailAddressCreateTextController,
...
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'password_Create_1ndk'),
                                                        controller: _model
                                                            .passwordCreateTextController,
...
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'password_CreateConfirm_cr9f'),
                                                        controller: _model
                                                            .passwordCreateConfirmTextController,
...
                                                        0.0, 0.0, 0.0, 16.0),
                                                child: FFButtonWidget(
                                                  key: ValueKey('Button_f5gy'),
                                                  onPressed: () async {
                                                    logFirebaseEvent(
...
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'emailAddress_qw36'),
                                                        controller: _model
                                                            .emailAddressTextController,
...
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'password_xgmh'),
                                                        controller: _model
                                                            .passwordTextController,
...
                                                        0.0, 0.0, 0.0, 16.0),
                                                child: FFButtonWidget(
                                                  key: ValueKey('Button_l0ij'),
                                                  onPressed: () async {
                                                    logFirebaseEvent(
...
                                  ),
                                  Tab(
                                    key: ValueKey('Tab_662p'),
                                    text: 'Log In',
                                  ),
...
